--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Webpack 2 demo</title>
   </head>
   <body>
+    <div id="app"></div>
     <script src="build/bundle.js"></script>
   </body>
 </html>
