--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Webpack 2 demo</title>
+    <title>DEV</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="build/bundle.js"></script>
+    <script src="/build/bundle.js"></script>
   </body>
 </html>
