--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>DEV</title>
+    <link href="/build/style.css" rel="stylesheet" type="text/css" />
+    <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="node_modules/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
+    <link href="/src/static/sb-admin.css" rel="stylesheet" type="text/css" />
+
   </head>
   <body>
     <div id="app"></div>
